# python-ai-toolkit

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
ai/: agent.py  async_client.py  async_executor.py  client.py  config.py  config_validator.py  cost.py  documents.py  embeddings.py  exceptions.py  executor.py  images.py  logger.py  memory.py  orchestrator.py  parser.py  prompts.py  rag.py  request_builder.py  retriever.py  retry.py  schemas.py  structured.py  tools.py  vector_store.py  workflow.py
benchmarks/: README.md  conftest.py  fakes.py  test_benchmark_fixtures.py  test_benchmark_smoke.py  test_rag_orchestration.py  test_request_lifecycle.py  test_retry_repair.py  test_structured_parsing.py  test_vector_search.py  test_workflow_execution.py
examples/: 01_plain_text.py  02_extract_structured_data.py  03_builder_usage.py  04_prompt_templates.py  05_streaming_response.py  06_async_client.py  07_tool_calling.py  08_image_inputs.py  09_1_structured_image_with_helper.py  09_structured_image_input.py  10_embeddings.py  11_vector_store.py  12_retriever.py  13_rag_pipeline.py  14_document_loader_rag.py  15_conversation_memory.py  16_agent.py  17_workflow_engine.py  18_multi_agent_orchestration.py  19_django_integration.py  20_fastapi_integration.py  README.md  drink_recommender.py  hello_ai.py
profiling/: profile_request_lifecycle.py  profile_vector_scaling.py  profile_vector_search.py
python_ai_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_agent.py  test_async_client.py  test_benchmark_fakes.py  test_cli.py  test_client.py  test_config.py  test_config_validator.py  test_cost.py  test_django_integration.py  test_documents.py  test_embeddings.py  test_executor.py  test_fastapi_integration.py  test_image_inputs.py  test_logger.py  test_logging_integration.py  test_memory.py  test_orchestrator.py  test_parser.py  test_prompt_builder.py  test_prompts.py  test_provider_factory.py  test_rag.py  (+8 more)
(+37 files in other folders)
