[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-ai-toolkit"
version = "0.7.0"
description = "Reusable infrastructure for integrating LLMs into Python applications."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Burim Koci" }
]
dependencies = [
    "openai",
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
django = [
    "django>=5.0",
]

dev = [
    "pytest",
    "black",
    "ruff",
    "django>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
target-version = ["py311"]